deploy/overlays/crc/jenkins-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  template:
    spec:
      containers:
        - name: jenkins
      volumes:
        - name: casc
          secret: null
          configMap: {name: jenkins-casc}
