deploy/overlays/crc/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: datenportal
spec:
  host: datenportal.apps-crc.testing
  to: {kind: Service, name: apisix}
  port: {targetPort: http}
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
